src/test/ui/issues/issue-6458.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-6458.rs:9:4
   |
LL |    foo(TypeWithState(marker::PhantomData));
   |    ^^^ cannot infer type for `State`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
